--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
-/* .lable-style {
-  @apply text-[14px] text-richblack-5;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-.form-style {
-  @apply rounded-lg bg-richblack-700 p-3 text-[16px] leading-[24px] text-richblack-5 shadow-[0_1px_0_0] shadow-white/50 placeholder:text-richblack-400 focus:outline-none;
-}  */
